corrected modeled events and regressors within first-level GLM

--- a/activation_analysis/dn_aa_01_first_level.ipynb
+++ b/activation_analysis/dn_aa_01_first_level.ipynb
@@ -14,12 +14,12 @@
     "    - estimate and save statistical maps for predefined contrasts\n",
     "\n",
     "---\n",
-    "**Last update**: 12.02.2020 "
+    "**Last update**: 17.07.2020"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,19 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of beh array: (32, 2, 110, 23)\n",
-      "Conditions [(0, 'rew'), (1, 'pun')]\n",
-      "Columns: [(0, 'block'), (1, 'block_bci'), (2, 'side'), (3, 'side_bci'), (4, 'magn_left'), (5, 'magn_right'), (6, 'response'), (7, 'rt'), (8, 'won_bool'), (9, 'won_magn'), (10, 'acc_after_trial'), (11, 'onset_iti'), (12, 'onset_iti_plan'), (13, 'onset_iti_glob'), (14, 'onset_dec'), (15, 'onset_dec_plan'), (16, 'onset_dec_glob'), (17, 'onset_isi'), (18, 'onset_isi_plan'), (19, 'onset_isi_glob'), (20, 'onset_out'), (21, 'onset_out_plan'), (22, 'onset_out_glob')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Directory to save first-level output\n",
     "path_out = os.path.join(path_root, \n",
@@ -91,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +199,9 @@
     "n_scans, t_r = 730, 2\n",
     "frame_times = np.arange(n_scans) * t_r\n",
     "\n",
+    "# Duration of phases\n",
+    "t_dec, t_out = 1.5, 1.5\n",
+    "\n",
     "# Useful object for representing contrasts\n",
     "MyContrast = namedtuple('Contrast', 'name contrast')"
    ]
@@ -221,16 +214,19 @@
     "\n",
     "#### Task regressors\n",
     "\n",
-    "|   phase  | name                         |    variable        |    onset    | duration |    modulation   |\n",
-    "|:--------:|------------------------------|:------------------:|:-----------:|:--------:|:---------------:|\n",
-    "| decision | decision onset               |  `reg_dec_ons`     | `onset_dec` |     0    |       None      |\n",
-    "|          | decision process             |  `reg_dec_tillres` | `onset_dec` |     RT   |       None      |\n",
-    "|          | expected correct probability |  `reg_dec_wcor`    | `onset_dec` |     RT   | `wcor_demeaned` |\n",
-    "| response | left button press            |  `reg_res_lbp`     | `onset_res` |     0    |       None      |\n",
-    "|          | right button press           |  `reg_res_rbp`     | `onset_res` |     0    |       None      |\n",
-    "|          | too late feedback            | `reg_res_miss`     | `onset_isi` |     0    |       None      |\n",
-    "| outcome  | outcome onset                |  `reg_out_ons`     | `onset_out` |     0    |       None      |\n",
-    "|          | prediction error             | `reg_out_perr`     | `onset_out` |     0    | `perr_demeaned` |\n",
+    "|   phase  | name                         |    variable        |    onset    | duration |    modulation   |  trial type  |\n",
+    "|:--------:|------------------------------|:------------------:|:-----------:|:--------:|:---------------:|:------------:|\n",
+    "| decision | decision onset               |  `reg_dec_ons`     | `onset_dec` |     0    |       None      |  responded   |\n",
+    "|          | decision onset (miss trial)  |  `reg_dec_miss`    | `onset_dec` |     0    |       None      |  missed      |\n",
+    "|          | ecpected value               |  `reg_dec_exvl`    | `onset_dec` |     0    | `exvl_demeaned` |  responded   |\n",
+    "|          | expected correct probability |  `reg_dec_wcor`    | `onset_dec` |     0    | `wcor_demeaned` |  responded   |\n",
+    "|          | decision process             |  `reg_dec_tillres` | `onset_dec` |     RT   |       None      |  responded   |\n",
+    "| response | left button press            |  `reg_res_lbp`     | `onset_res` |     0    |       None      |  responded   |\n",
+    "|          | right button press           |  `reg_res_rbp`     | `onset_res` |     0    |       None      |  responded   |\n",
+    "|          | too late feedback            |  `reg_res_miss`    | `onset_isi` |     0    |       None      |  miss        |\n",
+    "| outcome  | outcome onset                |  `reg_out_ons`     | `onset_out` |     0    |       None      |  all         |\n",
+    "|          | prediction error             |  `reg_out_perr`    | `onset_out` |     0    | `perr_demeaned` |  all         |\n",
+    "|          | outcome offset               |  `reg_out_off`     | `onset_iti` |     0    |       None      |  all         | \n",
     "\n",
     "#### Confounds\n",
     "\n",
@@ -243,18 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kmb/anaconda3/envs/decidenet/lib/python3.8/site-packages/nistats/experimental_paradigm.py:64: UserWarning: 'modulation' column found in the given events data.\n",
-      "  warnings.warn(\"'modulation' column found in the given events data.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for sub_idx in range(n_subjects):\n",
     "    for con_idx in range(n_conditions):\n",
@@ -276,40 +263,46 @@
     "        onset_res = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] + \\\n",
     "                    beh[sub_idx, con_idx, :, meta['dim4'].index('rt')]\n",
     "        onset_out = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_out')]\n",
+    "        offset_dec = onset_dec + t_dec\n",
+    "        offset_out = onset_out + t_out\n",
     "\n",
-    "        modulation_wcor = modulations_perr[sub_idx, con_idx, resp_type != 0]\n",
-    "        modulation_exvl = modulations_perr[sub_idx, con_idx, resp_type != 0]\n",
-    "        modulation_perr = modulations_perr[sub_idx, con_idx, resp_type != 0]\n",
+    "        modulation_wcor = modulations_wcor[sub_idx, con_idx, resp_type != 0]\n",
+    "        modulation_exvl = modulations_exvl[sub_idx, con_idx, resp_type != 0]\n",
+    "        modulation_perr = modulations_perr[sub_idx, con_idx]\n",
     "\n",
     "        modulation_wcor_demeaned = modulation_wcor - np.mean(modulation_wcor)\n",
     "        modulation_exvl_demeaned = modulation_exvl - np.mean(modulation_exvl)\n",
     "        modulation_perr_demeaned = modulation_perr - np.mean(modulation_perr)\n",
     "\n",
-    "        # Create regressors\n",
-    "        reg_res_lbp = Regressor('res_lbp', frame_times, onset_res[resp_type==-1])\n",
-    "        reg_res_rbp = Regressor('res_rbp', frame_times, onset_res[resp_type==1])\n",
-    "        reg_res_miss = Regressor('res_miss', frame_times, onset_dec[resp_type==0] + 2)\n",
-    "\n",
+    "        # Decision phase regressors\n",
     "        reg_dec_ons = Regressor('dec_ons', frame_times, onset_dec[resp_type != 0])\n",
+    "        reg_dec_miss = Regressor('dec_miss', frame_times, onset_dec[resp_type == 0])\n",
+    "        reg_dec_exvl = Regressor('dec_exvl', frame_times, onset_dec[resp_type != 0],\n",
+    "                                 modulation=modulation_exvl_demeaned)\n",
+    "        reg_dec_wcor = Regressor('dec_wcor', frame_times, onset_dec[resp_type != 0],\n",
+    "                                 modulation=modulation_wcor_demeaned)\n",
     "        reg_dec_tillres = Regressor(\n",
-    "            'dec_tillres', \n",
-    "            frame_times, \n",
+    "            'dec_tillres', frame_times, \n",
     "            onset_dec[resp_type != 0],\n",
     "            duration=beh[sub_idx, con_idx, resp_type != 0, meta['dim4'].index('rt')])\n",
-    "        reg_dec_wcor = Regressor(\n",
-    "            'dec_wcor', \n",
-    "            frame_times, \n",
-    "            onset_dec[resp_type != 0],\n",
-    "            duration=beh[sub_idx, con_idx, resp_type != 0, meta['dim4'].index('rt')],\n",
-    "            modulation = modulation_wcor_demeaned)\n",
     "\n",
-    "        reg_out_ons = Regressor('out_ons', frame_times, onset_out[resp_type != 0])\n",
-    "        reg_out_miss = Regressor('out_miss', frame_times, onset_out[resp_type == 0]) \n",
-    "        reg_out_perr = Regressor('out_perr', frame_times, onset_out[resp_type != 0], \n",
-    "            modulation = modulation_perr_demeaned)\n",
+    "        # Response phase regressors\n",
+    "        reg_res_lbp = Regressor('res_lbp', frame_times, onset_res[resp_type == -1])\n",
+    "        reg_res_rbp = Regressor('res_rbp', frame_times, onset_res[resp_type == 1])\n",
+    "        reg_res_miss = Regressor('res_miss', frame_times, offset_dec[resp_type == 0])\n",
+    "        \n",
+    "        # Outcome phase regressors\n",
+    "        reg_out_ons = Regressor('out_ons', frame_times, onset_out)\n",
+    "        reg_out_perr = Regressor('out_perr', frame_times, onset_out, \n",
+    "                                 modulation=modulation_perr_demeaned)\n",
+    "        reg_out_off = Regressor('out_off', frame_times, offset_out)\n",
     "\n",
     "        # Create design matrix\n",
-    "        regressors = [reg_dec_ons, reg_res_lbp, reg_res_rbp, reg_res_miss, reg_out_ons, reg_out_perr]\n",
+    "        regressors = [\n",
+    "            reg_dec_ons, reg_dec_miss, reg_dec_exvl, \n",
+    "            reg_res_lbp, reg_res_rbp, reg_res_miss, \n",
+    "            reg_out_ons, reg_out_perr, reg_out_off\n",
+    "        ]\n",
     "        dm, conditions = my_make_first_level_design_matrix(regressors)\n",
     "\n",
     "        # Save design matrix plot\n",
@@ -328,17 +321,19 @@
     "        contrasts.append(MyContrast('out_perr', conditions['out_perr']))\n",
     "\n",
     "        # Compute statistical maps and save it\n",
-    "        for contrast in contrasts:\n",
-    "            stat_map = fmri_glm.compute_contrast(\n",
-    "                contrast.contrast, \n",
-    "                stat_type='t',\n",
-    "                output_type='z_score'\n",
-    "            )\n",
+    "#         for contrast in contrasts:\n",
+    "#             stat_map = fmri_glm.compute_contrast(\n",
+    "#                 contrast.contrast, \n",
+    "#                 stat_type='t',\n",
+    "#                 output_type='z_score'\n",
+    "#             )\n",
     "\n",
-    "            stat_map_fname = f\"sub-{sub_label}_task-prl{con_label}_statmap\"\n",
-    "            os.makedirs(os.path.join(path_out, contrast.name), exist_ok=True)\n",
+    "#             stat_map_fname = f\"sub-{sub_label}_task-prl{con_label}_statmap\"\n",
+    "#             os.makedirs(os.path.join(path_out, contrast.name), exist_ok=True)\n",
     "\n",
-    "            nib.save(stat_map, os.path.join(path_out, contrast.name, stat_map_fname))"
+    "#             nib.save(stat_map, os.path.join(path_out, contrast.name, stat_map_fname))\n",
+    "        break\n",
+    "    break"
    ]
   }
  ],
