refactored dn_aa_03_second_level, updated environment.yml file, created dn_aa_04_results_reporting notebook

--- a/activation_analysis/dn_aa_01_first_level.ipynb
+++ b/activation_analysis/dn_aa_01_first_level.ipynb
@@ -181,15 +181,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify GLM\n",
-    "fmri_glm = FirstLevelModel(\n",
-    "    t_r=2,\n",
-    "    hrf_model='spm',\n",
-    "    drift_model='cosine',\n",
-    "    noise_model='ar1',\n",
-    "    high_pass=0.0078125, \n",
-    "    standardize=True,\n",
-    "    smoothing_fwhm=6)\n",
+    "# GLM parameters\n",
+    "glm_kwargs = {\n",
+    "    't_r': 2,\n",
+    "    'hrf_model': 'spm',\n",
+    "    'drift_model': 'cosine',\n",
+    "    'noise_model': 'ar1',\n",
+    "    'high_pass': 0.0078125, \n",
+    "    'standardize': True,\n",
+    "    'smoothing_fwhm': 6,\n",
+    "}\n",
     "\n",
     "# Name of relevant confounds\n",
     "confounds_relevant = [col for col in pd.read_csv(conf_files[0][0], sep='\\t').columns \n",
@@ -245,17 +246,22 @@
    "source": [
     "for sub_idx in range(n_subjects):\n",
     "    for con_idx in range(n_conditions):\n",
-    "\n",
+    "        \n",
     "        # Load subject data\n",
-    "        anat_img = nib.load(anat_files[sub_idx])\n",
     "        fmri_img = nib.load(fmri_files[con_idx][sub_idx])\n",
-    "        fmri_glm.mask = nib.load(mask_files[0][0])\n",
-    "        fmri_glm.subject_label = meta['dim1'][sub_idx]\n",
+    "        anat_img = nib.load(anat_files[sub_idx])\n",
     "        confounds = pd.read_csv(conf_files[con_idx][sub_idx], sep='\\t')\n",
     "        confounds = confounds[confounds_relevant]\n",
     "        confounds.index = frame_times # Standard time representation (in seconds)\n",
     "        sub_label = meta['dim1'][sub_idx]\n",
     "        con_label = meta['dim2'][con_idx]\n",
+    "        \n",
+    "        # Specify GLM\n",
+    "        fmri_glm = FirstLevelModel(\n",
+    "            **glm_kwargs\n",
+    "            mask_img=nib.load(mask_files[con_idx][sub_idx])\n",
+    "            subject_label=sub_label,\n",
+    "        )\n",
     "\n",
     "        # Setup events\n",
     "        resp_type = beh[sub_idx, con_idx, :, meta['dim4'].index('response')]\n",
@@ -299,16 +305,24 @@
     "\n",
     "        # Create design matrix\n",
     "        regressors = [\n",
-    "            reg_dec_ons, reg_dec_miss, reg_dec_exvl, \n",
+    "            reg_dec_ons, reg_dec_miss, reg_dec_wcor, \n",
     "            reg_res_lbp, reg_res_rbp, reg_res_miss, \n",
     "            reg_out_ons, reg_out_perr, reg_out_off\n",
     "        ]\n",
     "        dm, conditions = my_make_first_level_design_matrix(regressors)\n",
     "\n",
-    "        # Save design matrix plot\n",
-    "        path_dm_plot = os.path.join(path_out, \n",
-    "                                    f'design_matrices/sub-{sub_label}_task-prl{con_label}_dm.svg')\n",
-    "        plot_design_matrix(dm, output_file=path_dm_plot)\n",
+    "        # Save design matrix plot and correlation between regressors plot\n",
+    "        filename_base = os.path.join(path_out, \n",
+    "                                     'design_matrices', \n",
+    "                                     f'sub-{sub_label}_task-prl{con_label}')\n",
+    "        path_design_matrix = filename_base + '_dm.svg'\n",
+    "        path_corr_b_regres = filename_base + '_corr_reg.svg'\n",
+    "        plot_design_matrix(\n",
+    "            dm, \n",
+    "            output_file=path_design_matrix)\n",
+    "        plot_correlation_between_regressors(\n",
+    "            regressors, \n",
+    "            output_file=path_corr_b_regres)        \n",
     "\n",
     "        # Fit GLM\n",
     "        fmri_glm = fmri_glm.fit(fmri_img, confounds=confounds, design_matrices=dm)\n",
@@ -317,23 +331,20 @@
     "        contrasts = []\n",
     "        contrasts.append(MyContrast('res_lbp_minus_rbp', \n",
     "                                    conditions['res_lbp'] - conditions['res_rbp']))\n",
-    "        contrasts.append(MyContrast('out_ons', conditions['out_ons']))\n",
+    "        contrasts.append(MyContrast('dec_wcor', conditions['dec_wcor']))\n",
     "        contrasts.append(MyContrast('out_perr', conditions['out_perr']))\n",
     "\n",
     "        # Compute statistical maps and save it\n",
-    "#         for contrast in contrasts:\n",
-    "#             stat_map = fmri_glm.compute_contrast(\n",
-    "#                 contrast.contrast, \n",
-    "#                 stat_type='t',\n",
-    "#                 output_type='z_score'\n",
-    "#             )\n",
+    "        for contrast in contrasts:\n",
+    "            stat_map = fmri_glm.compute_contrast(\n",
+    "                contrast.contrast, \n",
+    "                stat_type='t',\n",
+    "                output_type='z_score'\n",
+    "            )\n",
     "\n",
-    "#             stat_map_fname = f\"sub-{sub_label}_task-prl{con_label}_statmap\"\n",
-    "#             os.makedirs(os.path.join(path_out, contrast.name), exist_ok=True)\n",
-    "\n",
-    "#             nib.save(stat_map, os.path.join(path_out, contrast.name, stat_map_fname))\n",
-    "        break\n",
-    "    break"
+    "            stat_map_fname = f'sub-{sub_label}_task-prl{con_label}_statmap'\n",
+    "            os.makedirs(os.path.join(path_out, contrast.name), exist_ok=True)\n",
+    "            nib.save(stat_map, os.path.join(path_out, contrast.name, stat_map_fname))\n"
    ]
   }
  ],
@@ -353,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
