--- a/activation_analysis/dn_aa_02_exclusion.ipynb
+++ b/activation_analysis/dn_aa_02_exclusion.ipynb
@@ -11,7 +11,7 @@
     "- returns DataFrame specifying final sample with high quality data\n",
     "\n",
     "---\n",
-    "**Last update**: 19.02.2020 "
+    "**Last update**: 23.07.2020 "
    ]
   },
   {
@@ -100,7 +100,7 @@
     "\n",
     "Second, we excluded additional subjects based on other factors e.g. errors in acquisition, chance-level performance. We excluded:\n",
     "- subject `m19` (both conditions): due to flipped response grips\n",
-    "- subject `m32` (pun condition): due to failed realignment (TODO: fix preprocessing for that subject)\n",
+    "- subject `m32` (pun condition): due to failed realignment\n",
     "\n",
     "Columns in `exclusions.csv` are coded accordingly:\n",
     "- `ok_fd_<condition>`: False for subjects with excessive movement during \\<condition\\>, True otherwise\n",
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
