improved demonstration of nistats bug

--- a/activation_analysis/nistats_map_threshold_bug.ipynb
+++ b/activation_analysis/nistats_map_threshold_bug.ipynb
@@ -47,48 +47,47 @@
      "output_type": "stream",
      "text": [
       "threshold for alpha=0.0001:   4.565349803782683\n",
-      "threshold for alpha=0.00001:  5.186664795363691\n",
-      "threshold for alpha=0.0001:   4.597391809542178\n",
-      "threshold for alpha=0.00001:  5.206475120366608\n",
-      "threshold for alpha=0.0001:   4.606463336236314\n",
-      "threshold for alpha=0.00001:  5.206475120366608\n",
-      "threshold for alpha=0.0001:   4.606463336236314\n",
-      "threshold for alpha=0.00001:  5.206475120366608\n"
+      "threshold for alpha=0.0001:   4.582806425922263\n",
+      "threshold for alpha=0.0001:   4.592953503528194\n",
+      "threshold for alpha=0.0001:   4.5986733316607635\n",
+      "threshold for alpha=0.0001:   4.5986733316607635\n",
+      "threshold for alpha=0.0001:   4.5986733316607635\n",
+      "threshold for alpha=0.0001:   4.618938723075018\n",
+      "threshold for alpha=0.0001:   4.6368001706712185\n"
      ]
     }
    ],
    "source": [
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)\n",
-    "\n",
-    "_, threshold = map_threshold(spm, alpha=0.00001, height_control='fdr')\n",
-    "print(f'threshold for alpha=0.00001: ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)\n",
+    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=10)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)\n",
-    "\n",
-    "_, threshold = map_threshold(spm, alpha=0.00001, height_control='fdr')\n",
-    "print(f'threshold for alpha=0.00001: ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)\n",
+    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=30)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)\n",
-    "\n",
-    "_, threshold = map_threshold(spm, alpha=0.00001, height_control='fdr')\n",
-    "print(f'threshold for alpha=0.00001: ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)\n",
+    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)\n",
+    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
     "\n",
-    "_, threshold = map_threshold(spm, alpha=0.00001, height_control='fdr')\n",
-    "print(f'threshold for alpha=0.00001: ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=20)"
+    "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
+    "print(f'threshold for alpha=0.0001:  ', threshold)\n",
+    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
+    "\n",
+    "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
+    "print(f'threshold for alpha=0.0001:  ', threshold)\n",
+    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=70)\n",
+    "\n",
+    "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
+    "print(f'threshold for alpha=0.0001:  ', threshold)\n",
+    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=120)\n",
+    "\n",
+    "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
+    "print(f'threshold for alpha=0.0001:  ', threshold)"
    ]
   }
  ],
