small fix for nistats_map_thresholding_bug

--- a/activation_analysis/nistats_map_threshold_bug.ipynb
+++ b/activation_analysis/nistats_map_threshold_bug.ipynb
@@ -53,38 +53,38 @@
       "threshold for alpha=0.0001:   4.5986733316607635\n",
       "threshold for alpha=0.0001:   4.5986733316607635\n",
       "threshold for alpha=0.0001:   4.618938723075018\n",
-      "threshold for alpha=0.0001:   4.6368001706712185\n"
+      "threshold for alpha=0.0001:   4.792659525247915\n"
      ]
     }
    ],
    "source": [
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=10)\n",
+    "ct = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=10)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=30)\n",
+    "ct = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=30)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
+    "ct = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
+    "ct = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
+    "ct = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=50)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=70)\n",
+    "ct = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=70)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)\n",
-    "_ = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=120)\n",
+    "ct = get_clusters_table(spm, stat_threshold=threshold, cluster_threshold=700)\n",
     "\n",
     "_, threshold = map_threshold(spm, alpha=0.0001, height_control='fdr')\n",
     "print(f'threshold for alpha=0.0001:  ', threshold)"
