fixed get_clusters_table bug, created final activation tables and activation plots

--- a/activation_analysis/dn_aa_05_results_reporting.ipynb
+++ b/activation_analysis/dn_aa_05_results_reporting.ipynb
@@ -1,12 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reporting GLM results\n",
+    "\n",
+    "This script creates activation plots and clusters table used to report GLM findings. Responsibilities:\n",
+    "- loads second level statistical parametric maps (spm's)\n",
+    "- threshold spm's and extract information about active clusters\n",
+    "- generates tables with information about active clusters and figures with thresholded activation maps\n",
+    "- saves files to drive\n",
+    "\n",
+    "> Warning! To reproduce this analysis use nilearn version > 0.7.0 which incorporates nistats functions\n",
+    "\n",
+    "---\n",
+    "**Last update**: 04.08.2020 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as ss\n",
     "import nibabel as nib\n",
@@ -17,8 +36,8 @@
     "import os\n",
     "\n",
     "from nilearn import plotting, image\n",
-    "from nistats.thresholding import map_threshold\n",
-    "from nistats.reporting import get_clusters_table\n",
+    "from nilearn.reporting import get_clusters_table\n",
+    "from nilearn.glm.thresholding import threshold_stats_img\n",
     "\n",
     "path_root = os.environ.get('DECIDENET_PATH')\n",
     "path_code = os.path.join(path_root, 'code')\n",
@@ -142,7 +161,7 @@
     "- with activity scaling positively with increasing prediction error (+PE regions)\n",
     "- with activity scaling negatively with increasing prediction error (-PE regions)\n",
     "\n",
-    "We used corrected p-value threshold of 0.00001 and cluster forming threshold of 20 connected voxels."
+    "We used corrected p-value threshold of 0.0001 and cluster forming threshold of 20 connected voxels."
    ]
   },
   {
@@ -151,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activations_perr_inc, thr_perr_inc = map_threshold(\n",
+    "activations_perr_inc, thr_perr_inc = threshold_stats_img(\n",
     "    spm_perr_inc,\n",
     "    mask_img=img_mni_09c_mask,\n",
     "    alpha=0.0001,\n",
@@ -160,17 +179,18 @@
     "    two_sided=True\n",
     ")\n",
     "\n",
-    "plotting.plot_img(\n",
+    "img = plotting.plot_img(\n",
     "    activations_perr_inc, \n",
     "    bg_img=img_mni_09c_clipped,\n",
     "    display_mode='z',\n",
-    "    cut_coords=(-12, 2, 27, 45, 70),\n",
+    "    cut_coords=(-12, 2, 27, 34, 45, 70),\n",
     "    threshold=thr_perr_inc,\n",
     "    vmax=9,\n",
     "    vmin=-9,\n",
     "    black_bg=False,\n",
     "    colorbar=True,\n",
-    "    cmap='cold_hot'\n",
+    "    cmap='cold_hot',\n",
+    "    output_file=os.path.join(path_out, 'spm_perr_alpha_0_0001.svg')\n",
     ")\n",
     "\n",
     "clusters_perr_inc = get_clusters_table(\n",
@@ -183,7 +203,8 @@
     "    cluster_threshold=20)\n",
     "\n",
     "extend_clusters_table(clusters_perr_inc)\n",
-    "extend_clusters_table(clusters_perr_dec)"
+    "extend_clusters_table(clusters_perr_dec)\n",
+    "\n"
    ]
   },
   {
@@ -196,7 +217,7 @@
     "- for which slope of relationship between activity and PE is larger in reward than in punishemnt condition\n",
     "- for which slope of relationship between activity and PE is smaller in reward than in punishemnt condition\n",
     "\n",
-    "We used corrected p-value threshold of 0.0001 and cluster forming threshold of 20 connected voxels."
+    "We used corrected p-value threshold of 0.001 and cluster forming threshold of 20 connected voxels."
    ]
   },
   {
@@ -205,10 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activations_perr_rew_minus_pun, thr_perr_rew_minus_pun = map_threshold(\n",
+    "activations_perr_rew_minus_pun, thr_perr_rew_minus_pun = threshold_stats_img(\n",
     "    spm_perr_rew_minus_pun,\n",
     "    mask_img=img_mni_09c_mask,\n",
-    "    alpha=0.0001,\n",
+    "    alpha=0.001,\n",
     "    height_control='fdr',\n",
     "    cluster_threshold=20,\n",
     "    two_sided=True\n",
@@ -218,13 +239,14 @@
     "    activations_perr_rew_minus_pun, \n",
     "    bg_img=img_mni_09c_clipped,\n",
     "    display_mode='z',\n",
-    "    cut_coords=(16, 30, 41),\n",
+    "    cut_coords=(-3, 16, 23, 30, 48, 58),\n",
     "    threshold=thr_perr_rew_minus_pun,\n",
     "    black_bg=False,\n",
     "    colorbar=True,\n",
     "    vmin=0,\n",
     "    vmax=9,\n",
-    "    cmap='hot'\n",
+    "    cmap='hot',\n",
+    "    output_file=os.path.join(path_out, 'spm_perr_rew_minus_pun_alpha_0_001.svg')\n",
     ")\n",
     "\n",
     "clusters_perr_rew_minus_pun = get_clusters_table(\n",
@@ -257,19 +279,29 @@
     "    os.path.join(path_first_level_output, 'out_perr'), \n",
     "    ['prlrew', 'prlpun'])\n",
     "stat_maps_ok = {con: [stat_maps[con][i] for i in ok_index] for con in stat_maps}\n",
+    "n_subjects_ok = len(ok_index)\n",
+    "\n",
+    "# Manual region labels\n",
+    "region_labels_perr_rew_minus_pun = [\n",
+    "    'V3/V4 R', 'Supramarginal R', 'Precuneus R', 'SPL R',\n",
+    "    'V3/V4 L', 'V1 R', 'Precentral R' \n",
+    "]\n",
     "\n",
     "# Extract individual beta values for clusters\n",
     "peak_individual_betas = {}\n",
     "for row, cluster in clusters_perr_rew_minus_pun.iterrows():\n",
     "    \n",
-    "    peak_mni_coords = np.array(cluster.loc[['X', 'Y', 'Z']], dtype='float')\n",
-    "    betas_prlrew = [extract_img_value_for_mni_coords(peak_mni_coords, img) \n",
-    "                    for img in stat_maps_ok['prlrew']]\n",
-    "    betas_prlpun = [extract_img_value_for_mni_coords(peak_mni_coords, img) \n",
-    "                    for img in stat_maps_ok['prlpun']]\n",
-    "    \n",
-    "    peak_individual_betas[tuple(peak_mni_coords)] = pd.DataFrame(\n",
-    "        data={'prlrew': betas_prlrew, 'prlpun': betas_prlpun})"
+    "    # Filter out subpeaks\n",
+    "    if cluster['Cluster Size (mm3)']:\n",
+    "        peak_mni_coords = np.array(cluster.loc[['X', 'Y', 'Z']], dtype='float')\n",
+    "        betas_prlrew = [extract_img_value_for_mni_coords(peak_mni_coords, img) \n",
+    "                        for img in stat_maps_ok['prlrew']]\n",
+    "        betas_prlpun = [extract_img_value_for_mni_coords(peak_mni_coords, img) \n",
+    "                        for img in stat_maps_ok['prlpun']]\n",
+    "\n",
+    "        region_label = region_labels_perr_rew_minus_pun[int(cluster['Cluster ID']) - 1]\n",
+    "        peak_individual_betas[region_label] = pd.DataFrame(\n",
+    "            data={'prlrew': betas_prlrew, 'prlpun': betas_prlpun})"
    ]
   },
   {
@@ -278,32 +310,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for peak_mni_coords, df in peak_individual_betas.items():\n",
+    "mpl.rcParams.update({'font.size': 14})\n",
+    "\n",
+    "for region_label, df in peak_individual_betas.items():\n",
     "\n",
     "    tstat = ss.ttest_ind(df['prlrew'], df['prlpun']).statistic\n",
     "\n",
-    "    fig, ax = plt.subplots(figsize=(4, 4), facecolor='w')\n",
+    "    fig, ax = plt.subplots(figsize=(2, 4), facecolor='w')\n",
     "\n",
-    "    bar_xticks = (0.1, 0.9) \n",
-    "    bar_xlim = (-0.5, 1.5)\n",
-    "    bar_width = 0.2\n",
+    "    bar_xticks = (0.3, 0.7) \n",
+    "    bar_xlim = (0, 1)\n",
+    "    bar_width = 0.3\n",
     "\n",
     "    ax.bar(\n",
     "        x=bar_xticks, \n",
     "        height=df.mean(),\n",
     "        width=bar_width,\n",
-    "        color=['#93c47d', '#e06666'],\n",
-    "        yerr=df.std(),\n",
-    "        linewidth=1,\n",
-    "        edgecolor='k'\n",
+    "        color=['#d4c26a', '#887caf'],\n",
+    "        yerr=df.std() / (n_subjects_ok ** (0.5)),\n",
+    "        linewidth=0,\n",
+    "        edgecolor='k',\n",
+    "        error_kw={'capsize':5, 'elinewidth': 1}\n",
     "    )\n",
     "    ax.axhline(0, color='k', lineWidth=1)\n",
     "\n",
     "    ax.set_xlim(*bar_xlim)\n",
-    "    ax.set_xticks(bar_xticks)\n",
-    "    ax.set_xticklabels(['reward', 'punishment'])\n",
+    "    ax.set_xticks([])\n",
     "    ax.set_ylabel('a.u.')\n",
-    "    ax.set_title(f'peak: {peak_mni_coords} → t-stat: {tstat:.3f}')"
+    "    ax.set_title(region_label)\n",
+    "    \n",
+    "    fig_name = region_label.replace(' ', '_').replace('/', '').lower()\n",
+    "    plt.savefig(\n",
+    "        os.path.join(path_out, f'{fig_name}.svg')\n",
+    "    )"
    ]
   },
   {
@@ -312,13 +351,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Export clusters table\n",
-    "# clusters_perr_inc.to_csv(os.path.join(\n",
-    "#     path_out, 'clusters_perr_inc.csv'))\n",
-    "# clusters_perr_dec.to_csv(os.path.join(\n",
-    "#     path_out, 'clusters_perr_dec.csv'))\n",
-    "# clusters_perr_rew_minus_pun.to_csv(os.path.join(\n",
-    "#     path_out, 'clusters_perr_rew_minus_pun.csv'))"
+    "# Export clusters table\n",
+    "clusters_perr_inc.to_csv(os.path.join(\n",
+    "    path_out, 'clusters_perr_inc_alpha_0_0001.csv'))\n",
+    "clusters_perr_dec.to_csv(os.path.join(\n",
+    "    path_out, 'clusters_perr_dec_alpha_0_0001.csv'))\n",
+    "clusters_perr_rew_minus_pun.to_csv(os.path.join(\n",
+    "    path_out, 'clusters_perr_rew_minus_pun_alpha_0_001.csv'))"
    ]
   }
  ],
