fixed bug in Regressor.from_values, checked all notebooks in connectivity_analysis/signal_extraction, refactored dn_pp_02

--- a/connectivity_analysis/signal_extraction/dn_sa_01_confound_exploration.ipynb
+++ b/connectivity_analysis/signal_extraction/dn_sa_01_confound_exploration.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Exploring confound regressors\n",
     "\n",
-    "This script explores confound regressors variability (measured as standard deviation) across subjects. It also shows correlation between different coonfounds for each subjects.\n",
+    "This script explores confound regressors variability (measured as standard deviation) across subjects. It also shows correlation between different coonfounds for each subjects. It exports filtered confounds for denoising pipeline `24HMPCSFWM` as `.mat` file used by SPM to perform signal deconvolution.\n",
     "\n",
     "---\n",
     "**Last update**: 25.08.2020"
