--- a/connectivity_analysis/signal_extraction/dn_sa_02_denoising.ipynb
+++ b/connectivity_analysis/signal_extraction/dn_sa_02_denoising.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "## Denoising fMRI data for connectivity analysis\n",
     "\n",
-    "This script is used for denoising fMRI task data for further PPI analysis. Denoising strategy consists of:\n",
+    "This script is used for denoising fMRI task data for further PPI analysis. In contrary to other popular method denoising is separate and independent step peformed prior to signal extraction. Denoising strategy consists of:\n",
     "- confounds regression: 24 head motion parameters, white matter and csf signal (raw, sqared, derivative and square of derivative)\n",
     "- detrending\n",
     "- high pass filtering with cut-off 128s\n",
     "- standardizing resulting signal\n",
     "\n",
-    "Denoised images are saved under `derivatives/fmridenoise` directory with BIDS compliant names.\n",
+    "Pipeline name: `24HMPCSFWM`\n",
+    "\n",
+    "> Denoised images are saved under `derivatives/fmridenoise` directory with BIDS compliant names:</br> `sub-<sub_name>_task-<task_name>_space-<space_name>_pipeline-<pipeline_name>_desc-denoised_bold.nii.gz`\n",
     "\n",
     "---\n",
     "**Last update**: 25.08.2020"
