--- a/connectivity_analysis/signal_extraction/dn_sa_04_signal_extraction.ipynb
+++ b/connectivity_analysis/signal_extraction/dn_sa_04_signal_extraction.ipynb
@@ -9,7 +9,7 @@
     "In this script, fMRI signal is extracted from predefined ROIs. Different brain parcellations may be used. This version support only spherical ROIs defined as csv table with at least four columns: `x`, `y` and `z` corresponding to MNI coordinates and `radius(mm)` corresponding to each ROI size in mm. \n",
     "> In order to specify and extract signal from different brain atlas please change `path_atlas` and `atlas_name` variables.\n",
     "\n",
-    "Two versions of timseries matrix are created:\n",
+    "Two versions of timseries matrices are created:\n",
     "- `timeseries_raw`: from preprocessed but not denoised functional data, \n",
     "- `timeseries_denoised`: from preprocessed and denoised functional data.\n",
     "\n",
